# scrabble-solver

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
console/: Cargo.toml
console/src/: main.rs
scrabble/: Cargo.toml  README.md
scrabble/src/: board.rs  board_iterator.rs  common.rs  game.rs  lib.rs  tile_bag.rs  utils.rs
scrabble/tests/: game_seeded_e2e.rs
scrabble/tests/fixtures/: baseline_2p_seed_20260416.json  baseline_3p_seed_20260417.json  baseline_4p_seed_20260418.json  branch_forced_exchange_2p_seed_888002.json  branch_forced_pass_2p_seed_777001.json  stress_4p_seed_999003.json
scripts/: build-wasm.mjs
src/: board.rs  lib.rs  main.rs  tile_bag.rs  utils.rs
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
web/: README.md  index.html  package.json  tsconfig.app.json
web/src/: App.tsx  main.tsx  styles.css  wasmApi.ts
web/src/types/: wasm-pkg.d.ts
