[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
scrabble = { path = "../scrabble" }
wasm-bindgen = "0.2.117"
web-sys = { version = "0.3.94", features = ["console"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[lib]
crate-type = ["cdylib"]
